# sgr-agent-core

./: README.md  pyproject.toml
benchmark/: benchmark_agent.py
docs/en/: index.md
docs/en/framework/: agents.md
docs/en/sgr-api/: SGR-Description-API.md  SGR-Integration-&-Examples.md
docs/ru/: index.md
docs/ru/framework/: agents.md
docs/ru/sgr-api/: SGR-Description-API.md  SGR-Integration-&-Examples.md
examples/agents_with_disabled_reporting/: README.md
examples/research_with_images/: README.md  research_with_images.py
examples/sgr_deep_research/: README.md  agents.py  config.yaml  definitions.py
services/: docker-compose.yml
services/api_service/: Dockerfile
sgr_agent_core/: __init__.py  agent_config.py  agent_definition.py  agent_factory.py  base_agent.py  base_tool.py
sgr_agent_core/agents/: __init__.py  sgr_agent.py  sgr_tool_calling_agent.py  tool_calling_agent.py
sgr_agent_core/prompts/: clarification_response.txt  system_prompt.txt
sgr_agent_core/server/: __init__.py  __main__.py  app.py  endpoints.py  models.py  settings.py
sgr_agent_core/services/: prompt_loader.py
tests/: conftest.py  test_agent_config_integration.py  test_agent_e2e.py  test_agent_factory.py  test_agents_loading.py  test_api_endpoints.py  test_api_models.py  test_base_agent.py  test_prompts.py
