[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgr-agent-core"
dynamic = ["version"]
description = "SGR Agent Core - Schema-Guided Reasoning for building agent"
readme = "README.md"
authors = [
    {name = "virrius"},
    {name = "VaKovaLskii"},
    {name = "abdullin"},
    {name = "EvilFreelancer"},
    {name = "Shadekss"},
    {name = "mixaill76"}
]
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "research", "reasoning", "schema-guided", "openai"]

dependencies = [
    # Core dependencies
    "PyYAML>=6.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.10.1",
    "openai>=1.0.0",
    "httpx[socks]>=0.25.0",
    # Search and research
    "tavily-python>=0.3.0",
    # Configuration and utilities
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "fastmcp>=2.12.4",
    "jambo>=0.1.3.post2",
]

[project.urls]
Homepage = "https://github.com/vamplabAI/sgr-agent-core"
Repository = "https://github.com/vamplabAI/sgr-agent-core"
Issues = "https://github.com/vamplabAI/sgr-agent-core/issues"
Documentation = "https://vamplabai.github.io/sgr-agent-core/"
"SGR Concept Creator - @abdullin" = "https://t.me/llm_under_hood"
"Coordinator - @VaKovaLskii" = "https://t.me/neuraldeep"
"Core Developer - @virrius" = "https://t.me/virrius_tech"
"Core Developer - @EvilFreelancer" = "https://t.me/evilfreelancer"
"DevOps & Deployment - @mixaill76" = "https://t.me/mixaill76"

[project.scripts]
sgr = "sgr_agent_core.server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
tests = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sgr_agent_core*"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "sgr_agent_core.__version__"}

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
"sgr_agent_core" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.txt"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501", "I"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["sgr_agent_core"]

[tool.coverage.report]
show_missing = true
